styles: fixed off screen menu height, adjusted font size off screen menu links

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -134,25 +134,33 @@ margin:0 auto;
 
 @media screen and (max-width: 830px) {
   
+  .navbar{ display: none;}
 
-.navbar{ display: none;}
 
+  .overlay{
+
+    display: none;
+    z-index: 0;
+  
+  
+  }
+  .overlay.active{
+
+    display: block;
+  
+  }
+
+  
    /* Responsive navbar */
-   .overlay{
 
-    display: block;
   
+  .ham-menu{ display: block;
+    position: relative;
+    z-index: 9;
   }
-
-   .off-screen-menu{
-    display: block;
-  }
-  
-  .ham-menu{ display: block;}
   .voodaserra {
     display: none;
   }
-
 
 
   
@@ -169,69 +177,68 @@ margin:0 auto;
 
 
 
-
+ 
 
 
     
-.off-screen-menu {
-  background-color:  #FFFF;
-border-l-color: var(--navy) white  white   ;
-  font-weight: bold;
-margin-top: 5rem;
-  height: 100vh;
-  width: 100%;
-  max-width: 250px;
-  position: fixed;
-  top: 0;
-  font-family: "Prompt", sans-serif;
-  right: -450px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;    
-  justify-content: center;
-  text-align: center;
-  gap: 5rem;
-  font-size: 2rem;
-  transition: .3s ease;
-}
-
-.off-screen-menu ul li {
-  margin-bottom: 5rem;
-
-}
-.off-screen-menu.active {
-  right: 0;
-}
-
-
-.off-screen-menu a{
-  color: var(--navy);
-  text-decoration: none;
-  list-style: none;
-  margin-bottom: 5rem;
-
+  .off-screen-menu {
+    background-color:  #FFFF;
+    font-weight: bold;
+    height: 100%;
+    width: 100%;
+    max-width: 250px;
+    position: fixed;
+    z-index: 2;
+    font-family: "Prompt", sans-serif;
+    right: -450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+    gap: 5rem;
+    font-size: 2rem;
+    transition: .3s ease;
+    display: block;
   
+  
+  }
+  
+  
+  
+  .off-screen-menu.active {
+    right: 0;
+  }
+  
+  
+  .off-screen-menu a{
+    color: var(--navy);
+    text-decoration: none;
+    list-style: none;
+    margin:1rem;
+    font-size: 3rem;
+  
+    
+  
+  }
 
-}
 
+  #open-sidebar-button{
+display: flex;
+align-items: center;
+justify-content: space-between;
+width: 100%;
+border-color: rgb(241, 241, 241)  rgb(241, 241, 241)  var(--navy)  ;
+border-width: 5px;
+    border-style: solid;
+    z-index: 9;
+        }
 
-
-#open-sidebar-button{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  border-color: 0 0 var(--navy)  ;
-      border-style: solid;
-          }
   
  
   
- 
-
 
   /*Responsive navbar */
-  
+
 
   .image_one {
     width: 25rem;
@@ -371,13 +378,15 @@ margin:0 auto;
 
 
 @media screen and (max-width: 580px) {
+  
   .navbar{ display: none;}
 
 
   .overlay{
 
-    display: block;
+    display: none;
     z-index: 0;
+  
   
   }
   .overlay.active{
@@ -420,7 +429,6 @@ margin:0 auto;
 .off-screen-menu {
   background-color:  #FFFF;
   font-weight: bold;
-  height: 120vh;
   height: 100%;
   width: 100%;
   max-width: 250px;
@@ -428,21 +436,20 @@ margin:0 auto;
   z-index: 2;
   font-family: "Prompt", sans-serif;
   right: -450px;
-
+  display: flex;
   flex-direction: column;
-  align-items: center;    
-  justify-content: center;
-  text-align: center;
+  align-items: center;
+  align-content: space-around;
   gap: 5rem;
   font-size: 2rem;
   transition: .3s ease;
   display: block;
-}
 
-.off-screen-menu ul li {
-  margin-bottom: 5rem;
 
 }
+
+
+
 .off-screen-menu.active {
   right: 0;
 }
@@ -452,7 +459,8 @@ margin:0 auto;
   color: var(--navy);
   text-decoration: none;
   list-style: none;
-  margin-bottom: 5rem;
+  margin:1rem;
+  font-size: 3rem;
 
   
 
@@ -466,6 +474,7 @@ align-items: center;
 justify-content: space-between;
 width: 100%;
 border-color: rgb(241, 241, 241)  rgb(241, 241, 241)  var(--navy)  ;
+border-width: 5px;
     border-style: solid;
     z-index: 9;
         }
@@ -475,8 +484,6 @@ border-color: rgb(241, 241, 241)  rgb(241, 241, 241)  var(--navy)  ;
   
 
   /*Responsive navbar */
-  
-  
 
   .nav-1{
     color:var(--blue);
@@ -655,46 +662,45 @@ footer {
 
 
     
-.off-screen-menu {
-  background-color:  #FFFF;
-  font-weight: bold;
-  height: 100%;
-  width: 100%;
-  max-width: 250px;
-  position: fixed;
-  z-index: 2;
-  font-family: "Prompt", sans-serif;
-  right: -450px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-content: space-around;
-  gap: 5rem;
-  font-size: 2rem;
-  transition: .3s ease;
-  display: block;
-
-
-}
-
-
-
-.off-screen-menu.active {
-  right: 0;
-}
-
-
-.off-screen-menu a{
-  color: var(--navy);
-  text-decoration: none;
-  list-style: none;
-
-
+  .off-screen-menu {
+    background-color:  #FFFF;
+    font-weight: bold;
+    height: 100%;
+    width: 100%;
+    max-width: 250px;
+    position: fixed;
+    z-index: 2;
+    font-family: "Prompt", sans-serif;
+    right: -450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+    gap: 5rem;
+    font-size: 2rem;
+    transition: .3s ease;
+    display: block;
   
-
-}
-
-
+  
+  }
+  
+  
+  
+  .off-screen-menu.active {
+    right: 0;
+  }
+  
+  
+  .off-screen-menu a{
+    color: var(--navy);
+    text-decoration: none;
+    list-style: none;
+    margin:1rem;
+    font-size: 3rem;
+  
+    
+  
+  }
 
   #open-sidebar-button{
 display: flex;
